--- a/app/partials/open/login.html
+++ b/app/partials/open/login.html
@@ -1,22 +1,29 @@
 
 
-<span> <h1><b> &nbsp;Participate.&nbsp; </h1>
-<span> <h1>&nbsp;Svalbard Marine <br /> &nbsp;Mammal Sightings.&nbsp;</h1></span>
-</span>
 
 
-<div ng-controller = "LoginCtrl">
+
+
 <!--Login fields through directive -->
+<div id="left_elem" ng-controller = "LoginCtrl" >
+	 <h1><span class="background_font"> &nbsp;Participate.&nbsp; <br /></span></h1>
+ <h1><span class="background_font">&nbsp;Svalbard Marine <br /> &nbsp;Mammal Sightings.&nbsp;</span></h1>
 <div ng-loginlogout></div>
-</div>
-
-<br />
-<div class="pure-g">
-<div class="pure-u-2-3">
 <p>We apologize! If your not registered please mail xxx@npolar.no </p>
 </div>
-</div>
+     <div  id="right_elem"></div>
 
+
+</table>
+
+
+<secion>
+
+
+
+
+
+</section>
 
 
 
