--- a/app/partials/user/form.html
+++ b/app/partials/user/form.html
@@ -17,7 +17,7 @@
 <label for="entry.longitude">Longitude: </label><input type="text" ng-model="entry.longitude">
 <label for="entry.latitude">Latitude: </label><input type="text" ng-model="entry.latitude" >
 <label for="entry.location_comment">Location comment: </label><textarea type="text" ng-model="entry.location_comment" ></textarea>
-<label for="entry.species">Species: </label><select  ng-model="entry.species" ng-options="item as item.name for item in items">
+<label for="entry.species">Species: </label><select  ng-model="entry.species" ng-options="item as item.eng for item in items">
 </select>
 <label for="entry.adult_m">Adult M:</label><input type="text" ng-model="entry.adult_m">
 <label for="entry.adult_f">Adult F:</label><input type="text" ng-model="entry.adult_f">
