--- a/app/partials/user/form.html
+++ b/app/partials/user/form.html
@@ -3,12 +3,14 @@
 
 <label for="entry.expedition.platform">Platform (ship, helicopter etc): </label>
 <input type="text" ng-model="entry.expedition.platform">
-<label for="entry.expedition.name">Platform name: </label><input type="text" ng-model="entry.expedition.name">
+<label for="entry.expedition.name">Name: </label><input type="text" ng-model="entry.expedition.name">
 <label for="entry.expedition.start_date">Expedition start date: </label><datepicker date-format="yyyy-MM-dd"><input type="text" ng-model="entry.expedition.start_date"></datepicker>
 <label for="entry.expedition.end_date">Expedition end date: </label>
 <datepicker date-format="yyyy-MM-dd"><input type="text" ng-model="entry.expedition.end_date"></datepicker>
 <label for="entry.expedition.platform_comment">Platform comment:</label>
 <input type="text" ng-model="entry.expedition.platform_comment">
+<label for="entry.expedition.organisation">Organisation:</label>
+<input type="text" ng-model="entry.expedition.organisation">
 
 
 <legend>Observation info</legend>
@@ -50,6 +52,9 @@
 <option value="water">In water</option>
 </select>
 <label for="entry.occurrence_remarks">Comment: </label><textarea type="text" ng-model="entry.occurrence_remarks" /></textarea>
+<label for="entry.expedition_db.href">:</label> <input type="text" ng-model="entry.expedition_db.href" />
+
+
 <legend><h2>Admin:</h2></legend>
 <label for="entry.editor_assessment">Editor's assessment: </label><select ng-model="entry.editor_assessment">
 <option value="none">None</option>
