added nor/eng menus

--- a/app/partials/open/species.html
+++ b/app/partials/open/species.html
@@ -6,7 +6,7 @@
 <div class="box">
 <div class="boxInner">
 
-<a href="{{species.link}}"><img ng-src="{{species.image}}" alt="{{species.name}}-{{species.rights}}" title="{{species.name}}-{{species.family}}" /></a>
+<a href="{{species.link}}"><img ng-src="{{species.image}}" alt="{{species.name}}-{{species.rights}}" title="{{species.eng}}-{{species.name}}-{{species.family}}" /></a>
 <div class="titleBox">{{species.eng}} ({{species.name}})</div>
 
 </div>
