--- a/app/partials/admin/all.html
+++ b/app/partials/admin/all.html
@@ -12,7 +12,7 @@
 
 
   <legend>or field search:</legend>
-	<label for="species">Species:</label><select ng-model="species" ng-options="item as item.name for item in items" >
+  <label for="entry.species">Species: </label><select  ng-model="entry.species" ng-options="item  as item.eng + ' (' + item.name + ')' for item in items">
 </select>
 	<label for="event_date1">Start time:</label><datepicker date-format="yyyy.MM.dd"><input type="text" ng-model="event_date1" ></datepicker>
 	<label for="end_time">End time:</label><datepicker date-format="yyyy.MM.dd"><input type="text" ng-model="event_date2" ></datepicker>
@@ -31,7 +31,9 @@
   <br />
 
    <table class="layout1">
-    <thead></thead>
+    <thead>
+ <th>Date</th><th>Species</th><th>Location</th><th>Assessment</th><th>Excelfile</th><th>View</th><th>Edit</th><th>Delete</th>
+    </thead>
     <tbody>
    <tr ng-repeat="entry in entries"> <td>{{ (entry.event_date).substring(0,10) }}&nbsp;</td>
         <td><a href="partials/edit_observations.html?id={{ entry.id }}">{{ entry.species }}&nbsp;</td>
