--- a/app/partials/user/my_observations.html
+++ b/app/partials/user/my_observations.html
@@ -11,18 +11,20 @@
 <div ng-controller="MyObservationsCtrl as sighting">
 <table class="layout1">
     <thead>
+        <th>Date</th><th>Species</th><th>Location</th><th>Latitude</th><th>Longitude</th><th></th><th></th><th></th><th></th>
     </thead>
 
     <tbody>
     <tr ng-repeat="entry in full.feed.entries"> <td>{{ (entry.event_date).substring(0,10) }}&nbsp;</td>
-        <td><a href="partials/edit_observations.html?id={{ entry.id }}">{{ entry.species}}&nbsp;</td>
+        <td>{{ entry.species}}&nbsp;</td>
         <td>{{ entry.locality }}&nbsp;</td>
         <td>{{ entry.latitude }}&nbsp;</td>
         <td>{{ entry.longitude }}&nbsp;</td>
         <td>{{ entry.editor_assessment }}</td>
         <td><a href="#/observation/{{entry.id}}">View</a></td>
         <td><a href="#/observation/edit/{{entry.id}}">Edit</a></td>
-        <td><a href="#/observation/delete/{{entry.id}}">Delete</a></td>
+        <td><a href="#/observation/">New copy</a></td>
+    <!--    <td><a href="#/observation/delete/{{entry.id}}">Delete</a></td> -->
    </tr>
    </tbody>
 </table>
