--- a/app/partials/admin/all.html
+++ b/app/partials/admin/all.html
@@ -30,6 +30,11 @@
 
   <br />
 
+
+<!-- Create CSV -->
+  <a href="#/csv">Create CSV</a><br /><br />
+
+<!--Table listing part -->
    <table class="layout1">
     <thead>
  <th>Date</th><th>Species</th><th>Location</th><th>Assessment</th><th>Excelfile</th><th>View</th><th>Edit</th><th>Delete</th>
