--- a/app/partials/user/form.html
+++ b/app/partials/user/form.html
@@ -51,8 +51,9 @@
 <option value="ice">On ice</option>
 <option value="water">In water</option>
 </select>
-<label for="entry.occurrence_remarks">Comment: </label><textarea type="text" ng-model="entry.occurrence_remarks" /></textarea>
-<label for="entry.expedition_db.href">:</label> <input type="text" ng-model="entry.expedition_db.href" />
+<label for="entry.occurrence_remarks">Comment: </label>
+<textarea type="text" ng-model="entry.occurrence_remarks" /></textarea>
+<label for="entry.expedition_db.href">Link:</label> <input type="text" ng-model="entry.expedition_db.href" />
 
 
 <legend><h2>Admin:</h2></legend>
