added larger map

--- a/app/partials/admin/all.html
+++ b/app/partials/admin/all.html
@@ -7,6 +7,19 @@
 <div ng-controller="MapCtrl">
 <form ng-submit="submit()" class="pure-form pure-form-stacked">
 
+
+<!-- View map -->
+
+
+  <leaflet center="center" defaults="layers" markers="markers" controls="controls" height="400px" width="100%"></leaflet>
+
+  <p >Select an area on the map by dragging/dropping</p>
+
+  <br />
+
+  <!-- Search ------>
+
+
   <label for="search">General search:&nbsp;</label><input type="text" placeholder="Search Svalbard Sightings.." ng-model="search" />
 
 
@@ -24,11 +37,6 @@
 <p></p>
 
 
-  <p >Select an area on the map by dragging/dropping</p>
-
-  <leaflet center="center" defaults="layers" markers="markers" controls="controls" height="400px" width="500px"></leaflet>
-
-  <br />
 
 
 <!-- Create CSV -->
