--- a/app/partials/admin/all.html
+++ b/app/partials/admin/all.html
@@ -34,20 +34,27 @@
 </div>
 
 
-<div class="pure-u-1 pure-u-md-1-1">
+<div class="pure-u-1 pure-u-md-1-2">
   <label for="start_time">Start time:</label><datepicker date-format="yyyy.MM.dd"><input type="text" ng-model="start_date" ></datepicker>
 </div>
 
-<div class="pure-u-1 pure-u-md-1-1">
+<div class="pure-u-1 pure-u-md-1-2">
   <label for="end_time">End time:</label><datepicker date-format="yyyy.MM.dd"><input type="text" ng-model="end_date" ></datepicker>
 </div>
 
-<div class="pure-u-1 pure-u-md-1-1">
-  <label for="lat2">Latitude:</label><input type="text" ng-model="lat1" size="5" class="lightblue"> - <input type="text" ng-model="lat2" size="5" >
+<div class="pure-u-1 pure-u-md-1-2">
+  <label for="lat2">Latitude start:</label><input type="text" ng-model="lat1" size="5" class="lightblue">
+</div>
+<div class="pure-u-1 pure-u-md-1-2">
+ <label for="lat2">Latitude end:</label> <input type="text" ng-model="lat2" size="5" >
 </div>
 
-<div class="pure-u-1 pure-u-md-1-1">
-  <label for="lng2">Longitude:</label><input type="text" ng-model="lng1" size="5" class="lightblue"> - <input type="text" ng-model="lng2" size="5" >
+<div class="pure-u-1 pure-u-md-1-2">
+  <label for="lng2">Longitude start:</label><input type="text" ng-model="lng1" size="5" class="lightblue">
+</div>
+
+<div class="pure-u-1 pure-u-md-1-2">
+   <label for="lng2">Longitude end:</label><input type="text" ng-model="lng2" size="5" >
 </div>
 
 <div class="pure-u-1 pure-u-md-1-1">
