--- a/app/partials/user/my_observations.html
+++ b/app/partials/user/my_observations.html
@@ -23,7 +23,7 @@
         <td>{{ entry.editor_assessment }}</td>
         <td><a href="#/observation/{{entry.id}}">View</a></td>
         <td><a href="#/observation/edit/{{entry.id}}">Edit</a></td>
-        <td><a href="#/observation/">New copy</a></td>
+        <td><a href="#/observation/copy/{{entry.id}}" >New copy</a></td>
     <!--    <td><a href="#/observation/delete/{{entry.id}}">Delete</a></td> -->
    </tr>
    </tbody>
