--- a/app/partials/user/my_observations.html
+++ b/app/partials/user/my_observations.html
@@ -8,7 +8,7 @@
 <a href="#/upload">Upload Excelsheet</a>
 
 <p></p>
-<div ng-controller="MyObservationsCtrl as sighting">
+ <div ng-controller="MyObservationsCtrl as entry">
 <table class="layout1">
     <thead>
         <th>Date</th><th>Species</th><th>Location</th><th>Latitude</th><th>Longitude</th><th></th><th></th><th></th><th></th>
