--- a/app/partials/user/form.html
+++ b/app/partials/user/form.html
@@ -8,7 +8,8 @@
 <label for="entry.expedition.end_date">Expedition end date: </label>
 <datepicker date-format="yyyy-MM-dd"><input type="text" ng-model="entry.expedition.end_date"></datepicker>
 <label for="entry.expedition.platform_comment">Platform comment:</label>
-<input type="text" ng-model="entry.expedition.platform_comment">
+<textarea type="text" ng-model="entry.expedition.platform_comment" ></textarea>
+
 <label for="entry.expedition.organisation">Organisation:</label>
 <input type="text" ng-model="entry.expedition.organisation">
 
