leafelt-draw - menu partly working

--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -5,17 +5,15 @@
 
 <a href="#/quality_check">Quality check</a>
 
-<div id="map"></div>
 
-<div ng-controller="MapCtrl">
+<div>
 
 <form ng-submit="submit()" class="pure-form pure-form-stacked">
 
 
 <!-- View map -->
+<div id="map"></div>
 
-
-  <leaflet center="center" defaults="layers" markers="markers" controls="controls" height="400px" width="100%"></leaflet>
 
   <p >Select an area on the map by dragging/dropping</p>
 
