css nav formula issue fixed

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -14,11 +14,6 @@ body {
       margin: 0px;
       padding: 20px;
       line-height:150%;
-   /*   background: url('../img/frontpage1200.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-attachment: fixed;
-        background-size: cover; */
 }
 
 #left_elem {
@@ -36,8 +31,8 @@ body {
    height:500px;width:500px;
 }
 
+/*fonts for input fields labels*/
 label {
-    /*fonts for input fields labels*/
     font-size: 1.05em;
     line-height: 1.25em;
     color: #4C9CF1;
@@ -72,7 +67,6 @@ h1 {
   font-size: 2em;
   line-height: 1em;
   margin: 20px 0 ;
-
 }
 
 /*Get blue background for heading*/
@@ -81,17 +75,12 @@ span.background-font {
   color: white;
 }
 
-
-
 /* For header menu*/
 img {
-
   width: 100%;
-
 }
 
 header {
-
   background: #fff;
   width: 100%;
   height: 76px;
@@ -100,11 +89,9 @@ header {
   left: 0;
   border-bottom: 4px solid #4C9CF1;
   z-index: 100;
-
 }
 
 #logo{
-
   margin: 20px;
   float: left;
   width: 40px;
@@ -114,62 +101,49 @@ header {
   border-bottom: none;
 }
 
-nav {
-
+/*Create Nav class menu to avoid interaction with Formula*/
+nav.menu {
   float: right;
   padding: 20px;
-
 }
 
 #menu-icon {
-
-  display: hidden;
+/*  display: hidden; */
   width: 100px;
   height: 40px;
   background: #4C8FEC url(../img/icons/menu_403.png) center;
   border-bottom: none;
-
 }
 
 a:hover#menu-icon {
-
   background-color: #444;
   border-radius: 4px 4px 0 0;
-
 }
 
 ul {
-
   list-style: none;
-
 }
 
 li {
-
   display: inline-block;
   float: left;
   padding: 10px;
 }
 
 .current {
-
-  /*color: #2262AD;*/
   border-bottom: 2px dotted white;
 }
 
 section {
-
   margin: 80px auto 40px;
   max-width: 980px;
   position: relative;
   padding: 20px
-
 }
 
 
 /*For responsive tables*/
 /*For Desktops/Laptops*/
-
 .layout1 {
   width: 100%;
   border-collapse: collapse;
@@ -190,25 +164,18 @@ section {
 }
 
 
-
-
 /*MEDIA QUERY*/
 @media only screen and (max-width : 800px) {
 
   header {
-
     position: absolute;
-
   }
 
   #menu-icon {
-
     display:inline-block;
-
   }
 
   nav ul, nav:active ul {
-
     display: none;
     position: absolute;
     padding: 20px;
@@ -218,26 +185,21 @@ section {
     top: 60px;
     width: 50%;
     border-radius: 4px 0 4px 4px;
-
   }
 
   nav li {
-
     text-align: center;
     width: 100%;
     padding: 10px 0;
     margin: 0;
-
   }
 
   nav:hover ul {
-
     display: block;
-
   }
 
 /*Remove image*/
-  #left_elem {
+#left_elem {
    width: 100%;
    float: left;
 }
@@ -245,13 +207,6 @@ section {
 #right_elem {
    display:none;
 }
-
-/*}
-
-  @media
-only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px)  {*/
-
 
   /* Force table to not be like tables anymore */
   .layout1, .layout1 thead, .layout1 tbody, .layout1 th, .layout1 td, .layout1 tr {
