--- a/app/partials/user/edit_observation.html
+++ b/app/partials/user/edit_observation.html
@@ -3,16 +3,6 @@
 
 <form formula="formulaData"></form>
 
-<!--<form novalidate name="entryForm" class="pure-form pure-form-stacked"  ng-controller="EditObservationCtrl as entry">
-
-
-
-<div ng-include="'partials/user/form.html'"></div>
-
-<br/><br />
-<input type="submit" ng-click="submit(entry.id)" value="Save" />
-</form>
-
 <br /><br />
 <h2>Upload images here:</h2> -->
 
@@ -21,4 +11,4 @@
     <input type="file" onchange="angular.element(this).scope().filesChanged(this)" multiple />
     <button ng-click="upload()">Upload</button>
     <li ng-repeat="file in files">{{file.name}}</li>
-</form>  -->
+</form>  --
