--- a/app/partials/open/login.html
+++ b/app/partials/open/login.html
@@ -9,7 +9,7 @@
 	 <h1><span class="background-font"> &nbsp;Participate.&nbsp; <br /></span></h1>
  <h1><span class="background-font">&nbsp;Svalbard Marine <br /> &nbsp;Mammal Sightings.&nbsp;</span></h1>
 <div ng-loginlogout></div>
-<p>We apologize! If your not registered please mail xxx@npolar.no </p>
+<p>If your not registered please ....log in here... </p>
 </div>
      <div  id="right_elem"></div>
 
