--- a/app/partials/user/edit_observation.html
+++ b/app/partials/user/edit_observation.html
@@ -1,8 +1,7 @@
 
 <h1><b> Edit observation {{ entry.id }} <b></h1>
 
-<form formula="formulaData">
-</form>
+<form formula="formulaData"></form>
 
 <!--
 <br /><br />
