--- a/app/partials/admin/all.html
+++ b/app/partials/admin/all.html
@@ -1,8 +1,5 @@
 
 
-
-
-
 <div ng-if="security.isAuthorized('read', endpoint)">
 
   <h1><b>Map search <b></h1>
@@ -35,7 +32,8 @@
 
 <div class="pure-g">
 <div class="pure-u-1 pure-u-md-1-1">
-  <label for="entry.species">Species: </label><select  ng-model="entry.species" ng-options="item  as item.eng + ' (' + item.name + ')' for item in items">
+  <label for="entry.species">Species: </label>
+<select  ng-model="entry.species" ng-options="item as item.eng + ' (' + item.name + ')' for item in items">
 </select>
 </div>
 
@@ -64,7 +62,7 @@
 </div>
 
 <div class="pure-u-1 pure-u-md-1-1">
-<input type="submit" id="submit" value="Search" />
+<input type="submit" id="submit" value="Search" /><input type="reset" value="reset">
 </div>
 
 </div>
@@ -108,10 +106,6 @@
   <h1><b>Administrators <b></h1>
   <p>You need an administrator's account in order to use this module. </p>
 </div>
-
-
-
-
 
 
 
