--- a/app/partials/admin/all.html
+++ b/app/partials/admin/all.html
@@ -32,8 +32,8 @@
 
 <div class="pure-g">
 <div class="pure-u-1 pure-u-md-1-1">
-  <label for="entry.species">Species: </label>
-<select  ng-model="entry.species" ng-options="item as item.eng + ' (' + item.name + ')' for item in items">
+  <label for="species">Species: </label>
+  <select  ng-model="species" ng-options="item as item.eng + ' (' + item.name + ')' for item in items"><option value=""> None </option>
 </select>
 </div>
 
@@ -62,7 +62,7 @@
 </div>
 
 <div class="pure-u-1 pure-u-md-1-1">
-<input type="submit" id="submit" value="Search" /><input type="reset" value="reset">
+<input type="submit" id="submit" value="Search" />&nbsp;&nbsp;<input type="reset" value="reset" data-ng-click="resetDropDown()">
 </div>
 
 </div>
