--- a/app/partials/admin/quality_check.html
+++ b/app/partials/admin/quality_check.html
@@ -1,4 +1,5 @@
 
+<div ng-if="security.isAuthorized('read', endpoint)">
 
 <h1><b> Quality check new observations<b></h1>
 <p></p>
@@ -24,3 +25,9 @@
 </table>
 </div>
 </div>
+
+<div ng-if="!security.isAuthenticated()">
+  <h1><b>Administrators <b></h1>
+  <p>You need an administrator's account in order to use this module. </p>
+</div>
+
