--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -3,7 +3,7 @@
 
 <h1><b>Map search <b></h1>
 
-<a href="#/quality_check">Quality check</a>
+<a href="quality_check">Quality check</a>
 
 
 <div>
@@ -68,7 +68,7 @@
 
 
 <!-- Create CSV -->
- <a href="#/csv">Create CSV</a><br /><br />
+ <a href="csv">Create CSV</a><br /><br />
 
 <!--Table listing part -->
 
