--- a/src/partials/open/login.html
+++ b/src/partials/open/login.html
@@ -1,12 +1,10 @@
-<!-- <div npolar-api-message></div>
-<div npolar-login-logout></div> -->
-
 
 <!--Login fields through directive -->
-<!--<div id="left_elem" ng-controller = "LoginCtrl" > -->
-	<div id="left_elem" >
+<div id="left_elem" ng-controller = "LoginCtrl" >
 	 <h1><span class="background-font"> &nbsp;Participate.&nbsp; <br /></span></h1>
  <h1><span class="background-font">&nbsp;Svalbard Marine <br /> &nbsp;Mammal Sightings.&nbsp;</span></h1>
+<div ng-loginlogout></div>
+<p>If your not registered please ....log in here... </p>
 </div>
      <div  id="right_elem"></div>
 
@@ -14,10 +12,5 @@
 </table>
 
 
-<secion>
 
 
-
-
-
-</section>
