angular-npolar update

--- a/src/partials/open/login.html
+++ b/src/partials/open/login.html
@@ -1,15 +1,16 @@
 
 <!--Login fields through directive -->
-<div id="left_elem" ng-controller = "LoginCtrl" >
+<div id="left_elem">
 	 <h1><span class="background-font"> &nbsp;Participate.&nbsp; <br /></span></h1>
  <h1><span class="background-font">&nbsp;Svalbard Marine <br /> &nbsp;Mammal Sightings.&nbsp;</span></h1>
-<div ng-loginlogout></div>
+<div ngLoginlogout></div>
+
 <p>If your not registered please ....log in here... </p>
 </div>
      <div  id="right_elem"></div>
 
 
-</table>
+<!--</table> -->
 
 
 
