--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -3,10 +3,10 @@
 
 <h1><b>Map search <b></h1>
 
-<a href="quality_check">Quality check</a>
+<a href="../quality_check">Quality check</a>
 
 
-<div>
+<div ng-controller ='AdminObservationsCtrl'>
 
 <form ng-submit="submit()" class="pure-form pure-form-stacked">
 
@@ -69,7 +69,7 @@
 
 
 <!-- Create CSV -->
- <a href="csv">Create CSV</a><br /><br />
+ <a href="../csv">Create CSV</a><br /><br />
 
 <!--Table listing part -->
 
