--- a/src/partials/user/my_observations.html
+++ b/src/partials/user/my_observations.html
@@ -4,8 +4,9 @@
 <p></p>
 <p></p>
 
-<a href="observation"> New</a>&nbsp;&nbsp;
-<a href="upload">Upload Excelsheet</a>
+<a href="../upload">Upload Excelsheet</a>
+ <a href="../new">New</a>
+
 
 <p></p>
  <div ng-controller="MyObservationsCtrl as entry">
