--- a/src/partials/user/my_observations.html
+++ b/src/partials/user/my_observations.html
@@ -4,8 +4,8 @@
 <p></p>
 <p></p>
 
-<a href="../upload">Upload Excelsheet</a>
- <a href="../new">New</a>
+<a href="upload">Upload Excelsheet</a>
+ <a href="observation/new">New</a>
 
 
 <p></p>
