--- a/src/partials/open/species.html
+++ b/src/partials/open/species.html
@@ -2,7 +2,7 @@
 
 <div class="no-touch">
 <div class="wrap">
-<div ng-repeat="species in sighting.species">
+<div ng-repeat="species in species">
 <div class="box">
 <div class="boxInner">
 
