--- a/src/partials/user/new_observation.html
+++ b/src/partials/user/new_observation.html
@@ -1,6 +1,9 @@
 
 <h1><b> New observation <b></h1>
 
+<div ng-if="security.isAuthenticated()">
+
+
 <form novalidate name="entryForm" class="pure-form pure-form-stacked" ng-controller="NewObservationCtrl as entry" >
 
 <div  ng-include="'partials/user/form.html'"></div>
@@ -15,6 +18,12 @@
 <h2>Upload images</h2>
 
 <!--<input type="submit"  ng-click="saveExcel()" value="Save Excel" /><br /><br /> -->
+
+
+</div>
+<div ng-show="!security.isAuthenticated()">
+  <p>Please <a href="#/">log in</a> in order to upload excel files.</p>
+</div>
 
 
 
