removed form ctrls calls

--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -9,7 +9,7 @@
 
 
 
-<form ng-submit="submit()" class="pure-form pure-form-stacked" ng-controller ='AdminObservationsCtrl'>
+<form ng-submit="submit()" class="pure-form pure-form-stacked">
 
 
 <!-- View map -->
