--- a/src/partials/user/my_observations.html
+++ b/src/partials/user/my_observations.html
@@ -11,7 +11,7 @@
 
 
 <p></p>
- <div ng-controller="MyObservationsCtrl as entry">
+ <div>
 <table class="layout1">
     <thead>
         <th>Date</th><th>Species</th><th>Location</th><th>Latitude</th><th>Longitude</th><th></th><th></th><th></th><th></th>
