--- a/src/partials/open/observers.html
+++ b/src/partials/open/observers.html
@@ -3,7 +3,7 @@
 
 <h1><b>Observers<b></h1>
 <p></p>
-<div ng-controller="SightingCtrl as sighting">
+<div>
 <p>
     	Our observers are valuable to us! We wish to thank:
     </p>
