--- a/src/partials/user/edit_observation.html
+++ b/src/partials/user/edit_observation.html
@@ -1,14 +1,18 @@
 
 <h1><b> Edit observation {{ entry.id }} <b></h1>
 
-<form novalidate name="entryForm" class="pure-form pure-form-stacked"  ng-controller="EditObservationCtrl as entry">
+
+<form formula="formulaData"></form>
+
+
+<!--<form novalidate name="entryForm" class="pure-form pure-form-stacked"  ng-controller="EditObservationCtrl as entry">
 
 
 <div ng-include="'partials/user/form.html'"></div>
 
 <br/><br />
 <input type="submit" ng-click="submit(entry.id)" value="Save" />
-</form>
+</form> -->
 
 <br /><br />
 <h2>Upload images here:</h2>
