--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -31,18 +31,18 @@
 
 <div class="pure-g">
 <div class="pure-u-1 pure-u-md-1-1">
-  <label for="entry.species">Species: </label><select  ng-model="entry.species" ng-options="item  as item.eng + ' (' + item.name + ')' for item in items">
+  <label for="species">Species: </label><select  ng-model="species" ng-options="item  as item.eng + ' (' + item.name + ')' for item in items">
 </select>
 </div>
 
 
-<div class="pure-u-1 pure-u-md-1-2">
+<!--<div class="pure-u-1 pure-u-md-1-2">
   <label for="start_time">Start time:</label><datepicker date-format="yyyy.MM.dd"><input type="text" ng-model="start_date" ></datepicker>
 </div>
 
 <div class="pure-u-1 pure-u-md-1-2">
   <label for="end_time">End time:</label><datepicker date-format="yyyy.MM.dd"><input type="text" ng-model="end_date" ></datepicker>
-</div>
+</div> -->
 
 <div class="pure-u-1 pure-u-md-1-2">
   <label for="lat1">Latitude start:</label><input type="text" ng-model="lat1" size="5" class="lightblue">
