--- a/src/partials/admin/quality_check.html
+++ b/src/partials/admin/quality_check.html
@@ -3,7 +3,7 @@
 <h1><b> Quality check new observations<b></h1>
 <p></p>
 <p></p>
-<div ng-if="security.isAuthorized('read', endpoint)">
+<!--<div ng-if="security.isAuthorized('read', endpoint)">-->
 
 <p></p>
  <div ng-controller="QualityCtrl as entry">
@@ -27,9 +27,9 @@
 </div>
 
 
-</div>
+<!--</div>  -->
 <!-- if not logged in -->
-    <div ng-if="!security.isAuthenticated()">
+<!--    <div ng-if="!security.isAuthenticated()">
   <h1><b>Administrators <b></h1>
   <p>You need an administrator's account in order to use this module. </p>
-</div>
+</div> -->
