--- a/src/partials/user/edit_observation.html
+++ b/src/partials/user/edit_observation.html
@@ -2,7 +2,7 @@
 <h1><b> Edit observation {{ entry.id }} <b></h1>
 
 
-<form formula="formulaData"></form>
+<div formula="formula"></div>
 
 
 <!--<form novalidate name="entryForm" class="pure-form pure-form-stacked"  ng-controller="EditObservationCtrl as entry">
