--- a/src/partials/user/my_observations.html
+++ b/src/partials/user/my_observations.html
@@ -4,7 +4,7 @@
 <p></p>
 <p></p>
 
-<!--<div ng-if="security.isAuthenticated()"> -->
+<div ng-if="security.isAuthenticated()">
 
 <a href="upload">Upload Excelsheet</a>
  <a href="observation/new">New</a>
@@ -34,7 +34,7 @@
 </div>
 </div>
 
-<!--</div>
+</div>
 <div ng-show="!security.isAuthenticated()">
   <p>Please <a href="#/">log in</a> in order to view your sightings</p>
-</div> -->
+</div>
