--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,11 +14,6 @@ body {
       margin: 0px;
       padding: 20px;
       line-height:150%;
-   /*   background: url('./img/frontpage1200.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-attachment: fixed;
-        background-size: cover; */
 }
 
 /*Leaflet*/
@@ -210,7 +205,7 @@ section {
 
   }
 
-  nav ul, nav:active ul {
+  nav#nav_id ul, nav#nav_id:active ul {
 
     display: none;
     position: absolute;
@@ -224,7 +219,8 @@ section {
 
   }
 
-  nav li {
+
+  nav#nav_id li {
 
     text-align: center;
     width: 100%;
@@ -233,7 +229,8 @@ section {
 
   }
 
-  nav:hover ul {
+
+  nav#nav_id:hover ul {
 
     display: block;
 
@@ -248,11 +245,6 @@ section {
 #right_elem {
    display:none;
 }
-
-/*}
-  @media
-only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px)  {*/
 
 
   /* Force table to not be like tables anymore */
