--- a/src/partials/admin/all_bkp.html
+++ b/src/partials/admin/all_bkp.html
@@ -1,4 +1,6 @@
 
+
+
 <h1><b>Map search <b></h1>
 
 <!--<div ng-if="security.isAuthorized('read', endpoint)"> -->
@@ -6,7 +8,10 @@
 <a href="quality_check">Quality check</a>
 
 
+
 <form ng-submit="submit()" class="pure-form pure-form-stacked">
+
+
 <!-- View map -->
 <div id="map"></div>
 
@@ -15,44 +20,49 @@
 
   <br />
 
-
-
   <!-- Search ------>
-
-
 
 
 
   <label for="search">General search:&nbsp;</label><input type="text" placeholder="Search Svalbard Sightings.." ng-model="search" />
 
 
-<legend>or field search:</legend>
+  <legend>or field search:</legend>
 
 <div class="pure-g">
 <div class="pure-u-1 pure-u-md-1-1">
-<label for="species">Species: </label><select  ng-model="species" ng-options="items  as item.eng + ' (' + item.name + ')' for item in items"></select>
+  <label for="species">Species: </label><select  ng-model="species" ng-options="item  as item.eng + ' (' + item.name + ')' for item in items">
+</select>
+</div>
+
+
+<!--<div class="pure-u-1 pure-u-md-1-2">
+  <label for="start_time">Start time:</label><datepicker date-format="yyyy.MM.dd"><input type="text" ng-model="start_date" ></datepicker>
 </div>
 
 <div class="pure-u-1 pure-u-md-1-2">
- <label for="lat1">Latitude start:</label> <input type="text" ng-model="lat1" size="5" >
-</div>
+  <label for="end_time">End time:</label><datepicker date-format="yyyy.MM.dd"><input type="text" ng-model="end_date" ></datepicker>
+</div> -->
 
+<div class="pure-u-1 pure-u-md-1-2">
+  <label for="lat1">Latitude start:</label><input type="text" ng-model="lat1" size="5" class="lightblue">
+</div>
 <div class="pure-u-1 pure-u-md-1-2">
  <label for="lat2">Latitude end:</label> <input type="text" ng-model="lat2" size="5" >
 </div>
 
 <div class="pure-u-1 pure-u-md-1-2">
-  <label for="lng1">Longitude start:</label><input type="text" ng-model="lng1" size="5">
+  <label for="lng1">Longitude start:</label><input type="text" ng-model="lng1" size="5" class="lightblue">
 </div>
 
 <div class="pure-u-1 pure-u-md-1-2">
    <label for="lng2">Longitude end:</label><input type="text" ng-model="lng2" size="5" >
 </div>
 
-
 <div class="pure-u-1 pure-u-md-1-1">
 <input type="submit" id="submit" value="Search" />
 </div>
+
 </div>
 
 <p></p>
@@ -85,10 +95,10 @@
 </form>
 
 
-
-
-
-
-
-
+<!--</div> -->
+<!-- if not logged in -->
+ <!--   <div ng-if="!security.isAuthenticated()">
+  <h1><b>Administrators <b></h1>
+  <p>You need an administrator's account in order to use this module. </p>
+</div> -->
 
