no line break observers

--- a/src/partials/user/observers.html
+++ b/src/partials/user/observers.html
@@ -11,9 +11,9 @@
 
 
 
-    <p ng-repeat="observer in feed.entries">
+    <span ng-repeat="observer in feed.entries">
      <b>{{ observer.recorded_by }}&nbsp;</b>
-    </p>
+    </span>
 
 
 </div>
