admin access almost fixed

--- a/src/partials/user/my_observations.html
+++ b/src/partials/user/my_observations.html
@@ -14,7 +14,7 @@
  <div>
 <table class="layout1">
     <thead>
-        <th>Date</th><th>Species</th><th>Location</th><th>Latitude</th><th>Longitude</th><th></th><th></th><th></th><th></th>
+        <th>Date</th><th>Species</th><th>Location</th><th>Latitude</th><th>Longitude</th><th>Assessment</th><th></th><th></th>
     </thead>
 
     <tbody>
