--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -1,7 +1,8 @@
 
 <h1><b>Map search <b></h1>
 
-<!--<div ng-if="security.isAuthorized('read', endpoint)"> -->
+ <!-- <div ng-if="security.isAuthorized('read', endpoint)"> -->
+  <div ng-if="isAdmin()">
 
 <a href="quality_check">Quality check</a>
 
@@ -9,6 +10,7 @@
 
 <!-- View map -->
 <div id="map"></div>
+<leaflet></leaflet>
 
 
   <p >Select an area on the map by dragging/dropping</p>
@@ -19,11 +21,7 @@
 
   <!-- Search ------>
 
-
-
-
-
-  <label for="search">General search:&nbsp;</label><input type="text" placeholder="Search Svalbard Sightings.." ng-model="search" />
+<label for="search">General search:&nbsp;</label><input type="text" placeholder="Search Svalbard Sightings.." ng-model="search" />
 
 
 <legend>or field search:</legend>
@@ -80,6 +78,11 @@
   </tr>
 </tbody>
 </table>
+
+</div> <!-- authorized -->
+<div ng-show="!isAdmin()">
+      <p>Please <a href="/sighting">log in</a> with your admin account in order to view this page.</p>
+</div>
 
 
 </form>
