angular-leaflet-dir working

--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -9,8 +9,7 @@
 <form ng-submit="submit()" class="pure-form pure-form-stacked">
 
 <!-- View map -->
-<div id="map"></div>
-<!--<leaflet></leaflet> -->
+ <leaflet center="center" defaults="layers" markers="markers" controls="controls" height="400px" width="100%"></leaflet>
 
 
   <p >Select an area on the map by dragging/dropping</p>
