--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -27,8 +27,10 @@
 
 <div class="pure-g">
 <div class="pure-u-1 pure-u-md-1-1">
-<label for="species">Species: </label><select  ng-model="species" ng-options="items  as item.eng + ' (' + item.name + ')' for item in items"></select>
+<label for="species">Species: </label><select  ng-model="species" ng-options="items  as item.eng + ' (' + item.name + ')' for item in items">
+</select>
 </div>
+
 
 <div class="pure-u-1 pure-u-md-1-2">
  <label for="lat1">Latitude start:</label> <input type="text" ng-model="lat1" size="5" >
