admin access working

--- a/src/partials/admin/all.html
+++ b/src/partials/admin/all.html
@@ -1,12 +1,13 @@
 
 <h1><b>Map search <b></h1>
 
- <!-- <div ng-if="security.isAuthorized('read', endpoint)"> -->
-  <div ng-if="isAdmin()">
+
+<div ng-if="isAdmin()">
 
 <a href="quality_check">Quality check</a>
 
-<form ng-submit="submit()" class="pure-form pure-form-stacked">
+<!-- <form id="submit" ng-submit="submit()" class="pure-form pure-form-stacked"> -->
+<div ng-form name="form2" ng-submit="submit()" ng-controller="AdminObservationsCtrl">
 
 <!-- View map -->
  <leaflet center="center" defaults="layers" markers="markers" controls="controls" height="400px" width="100%"></leaflet>
@@ -15,9 +16,6 @@
   <p >Select an area on the map by dragging/dropping</p>
 
   <br />
-
-
-
   <!-- Search ------>
 
 <label for="search">General search:&nbsp;</label><input type="text" placeholder="Search Svalbard Sightings.." ng-model="search" />
@@ -80,16 +78,19 @@
 </tbody>
 </table>
 
-</div> <!-- authorized -->
+
+</div> <!-- ngForm -->
+
+</div> <!-- isAdmin -->
 
 
+<div ng-show="!isAdmin()">
 
-<div ng-if="!isAdmin()">
       <p>Please <a href="/sighting">log in</a> with your admin account in order to view this page.</p>
 </div>
 
 
-</form>
+<!-- </form> -->
 
 
 
