my observations search fixed

--- a/src/partials/user/my_observations.html
+++ b/src/partials/user/my_observations.html
@@ -18,7 +18,7 @@
     </thead>
 
     <tbody>
-    <tr ng-repeat="entry in feed.entries"> <td>{{ (entry.event_date).substring(0,10) }}&nbsp;</td>
+    <tr ng-repeat="entry in feed2.feed.entries"> <td>{{ (entry.event_date).substring(0,10) }}&nbsp;</td>
         <td>{{ entry.species}}&nbsp;</td>
         <td>{{ entry.locality }}&nbsp;</td>
         <td>{{ entry.latitude }}&nbsp;</td>
